--- a/css/layout.css
+++ b/css/layout.css
@@ -18,7 +18,7 @@ body > header {
 	margin: 0;
 	width: 100%;
 	overflow: hidden;
-	background-image: url("/images/homeMoonlight.jpeg");
+	background-image: url("images/homeMoonlight.jpeg");
 	background-position-x: center;
 	background-position-y: top;
 	background-repeat: no-repeat;
